--- a/editword.html
+++ b/editword.html
@@ -7,7 +7,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link rel="stylesheet" href="./css/layer.css">
    <link rel="stylesheet" href="./css/editword.css">
-   <title>中信期货贺卡</title>
+   <title>新年贺卡</title>
    <script>
       (function (win, doc) {
          if (!win.addEventListener) return;
