--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/animate.css" />
-    <title>中信期货祝您新春快乐</title>
+    <title>新年贺卡</title>
 
     <script>
       (function(win, doc) {
@@ -92,24 +92,13 @@
             <img src="./image/3.png" alt="" />
           </div>
           <img src="./image/music.png" alt="" class="music_icon" />
-          <!-- <div class="leftn">
-          <span>中</span>
-          <span>信</span>
-          <span>期</span>
-          <span>货</span>
-          <span>祝</span>
-          <span>您</span>
-          <span>新</span>
-          <span>春</span>
-          <span>快</span>
-          <span>乐</span>
-        </div> -->
+      
           <div class="bottombox">
             <!-- <div style="font-size: .4rem;font-family: 楷体;">
             <span>金鼠贺岁</span>
             <span>庚子迎春</span>
           </div> -->
-            <img src="./image/log.png" alt="" style="width: 2rem;" />
+            <img src="./image/55.png" alt="" style="width: 2.3rem;" />
           </div>
           <img src="./image/arrow.png" alt="" class="arrow" />
         </div>
@@ -185,7 +174,7 @@
           style="position: absolute;width: 100%;height: 100%;"
         />
         <img src="./image/treen.png" alt="" class="toptree" />
-        <img src="./image/goldlog.png" alt="" class="btlog">
+        <img src="./image/55.png" alt="" class="btlog">
       </div>
     </div>
 
